--- a/src/blocks/quiz/quiz.scss
+++ b/src/blocks/quiz/quiz.scss
@@ -1,115 +1,191 @@
 @import "../../scss/colors.scss";
 
 .quiz {
-  height: calc(100vh - 210px);
-  max-height: 1000px;
-  min-height: 600px;
-  padding: 40px 30px;
-  box-sizing: border-box;
+  &__steps {
+    display: flex;
+    flex-direction: column;
+    row-gap: 120px;
 
-  @media screen and (max-width: 769px) {
-    padding: 40px 15px;
-    min-height: unset;
-    max-height: unset;
-    height: unset;
+    @media screen and (max-width: 769px) {
+      row-gap: 60px;
+    }
   }
 
   &-step {
+    position: relative;
     display: flex;
     flex-direction: column;
-    row-gap: 50px;
+    row-gap: 60px;
+    padding: 0 65px;
+    box-sizing: border-box;
+
+    @media screen and (max-width: 769px) {
+      padding: 0;
+      row-gap: 25px;
+      align-items: center;
+    }
+
+    &__number {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 60px;
+      display: flex;
+
+      @media screen and (max-width: 1441px) {
+        width: 50px;
+      }
+      @media screen and (max-width: 769px) {
+        position: unset;
+        height: 38px;
+        width: auto;
+      }
+
+      & svg {
+        width: 100%;
+        object-fit: contain;
+
+        @media screen and (max-width: 769px) {
+          width: auto;
+          height: 100%;
+        }
+      }
+    }
 
     &__title {
-      text-transform: none;
-      margin-bottom: 0;
+      color: $red;
+      text-align: center;
+      font-size: 32px;
+      font-weight: 500;
+      line-height: 120%; /* 38.4px */
+
+      @media screen and (max-width: 769px) {
+        font-size: 22px;
+      }
+      @media screen and (max-width: 345px) {
+        font-size: 18px;
+      }
     }
 
     &__items {
       display: flex;
       flex-wrap: wrap;
+      gap: 20px;
       justify-content: center;
-      column-gap: 20px;
-      row-gap: 25px;
 
-      @media screen and (max-width: 1025px) {
-        column-gap: 15px;
-        row-gap: 15px;
+      max-width: 1240px;
+      width: 100%;
+      margin: 0 auto;
+
+      @media screen and (max-width: 769px) {
+        flex-direction: column;
+        row-gap: 10px;
       }
     }
 
     &__item {
+      max-width: calc(33.33% - 13.3px);
+      width: 100%;
       position: relative;
-      display: flex;
-      width: calc(25% - 15px);
       cursor: pointer;
 
-      @media screen and (max-width: 1025px) {
-        width: calc(33% - 10px);
+      @media screen and (max-width: 1199px) {
+        max-width: calc(50% - 10px);
       }
       @media screen and (max-width: 769px) {
-        width: calc(50% - 7.5px);
-      }
-      @media screen and (max-width: 576px) {
-        width: 100%;
+        max-width: 100%;
       }
     }
 
     &__input {
+      border: 1px solid #C9ADA7;
+      background: #FFF;
+      box-shadow: 0px 2px 4px 0px rgba(77, 56, 49, 0.20) inset;
+
+      padding: 19px 25px;
+      display: flex;
+      cursor: pointer;
+      align-items: center;
+      transition: 0.2s;
+
+      font-size: 18px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: 120%; /* 21.6px */
+      color: $brown;
+      width: 100%;
+      box-sizing: border-box;
+
+      @media screen and (max-width: 769px) {
+        font-size: 16px;
+        height: 55px;
+        padding: 15px 25px;
+      }
+      @media screen and (max-width: 345px) {
+        padding: 15px;
+      }
+
+      &::placeholder {
+        color: $beige;
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 120%; /* 21.6px */
+
+        @media screen and (max-width: 769px) {
+          font-size: 16px;
+        }
+      }
+
+      &:focus {
+        border: 1px solid $brown;
+        outline: none;
+      }
+    }
+
+    &__radio {
       position: absolute;
+      top: 0;
       left: 0;
       opacity: 0;
+      z-index: -1;
 
-      &:checked ~ .quiz-step__text {
-        color: $red;
-        font-weight: 700;
+      &:checked + .quiz-step__text {
+        background: $beige;
+        box-shadow: 0px 2px 4px 0px rgba(77, 56, 49, 0.20) inset;
       }
     }
 
     &__text {
+      border: 1px solid #C9ADA7;
+      background: #FFF;
+      box-shadow: 0px 2px 4px 0px rgba(154, 140, 152, 0.25);
       height: 60px;
-      background-color: $white;
-      border-radius: 10px;
-
-      color: #001749;
+      color: $brown;
       font-size: 18px;
       font-weight: 500;
-      line-height: 120%;
-      padding: 20px;
+      line-height: 120%; /* 21.6px */
+
       box-sizing: border-box;
+      padding: 19px 25px;
       width: 100%;
+      display: flex;
+      white-space: nowrap;
+      align-items: center;
 
       @media screen and (max-width: 1025px) {
-        height: 55px;
-        padding: 16px 20px;
+        font-size: 16px;
+        padding: 15px;
       }
+
       @media screen and (max-width: 769px) {
-        height: 50px;
-        font-size: 15px;
+        height: 55px;
+        padding: 15px 25px;
+      }
+      @media screen and (max-width: 345px) {
+        padding: 15px;
+        font-size: 14px;
       }
     }
-
-    &__buttons {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      column-gap: 20px;
-
-      @media screen and (max-width: 576px) {
-       flex-direction: column-reverse;
-        row-gap: 20px;
-      }
-    }
-
-    &__button {
-      max-width: 250px;
-
-      @media screen and (max-width: 576px) {
-        max-width: 100%;
-      }
-    }
-  }
-
-  @media screen and (max-width: 769px) {
-
   }
 }
