--- a/src/blocks/footer/footer.scss
+++ b/src/blocks/footer/footer.scss
@@ -1,29 +1,46 @@
 @import "../../scss/colors.scss";
 
 .footer {
-  background-color: $white;
-  padding: 0 30px;
+  background: #FFF;
+  box-shadow: 0px -2px 4px 0px rgba(77, 56, 49, 0.10);
+  padding: 25px 30px;
 
   @media screen and (max-width: 769px) {
-    padding: 0 15px;
+    padding: 15px;
   }
 
-  &__text {
-    padding: 38px 0;
+  &__link {
     display: flex;
-    align-items: center;
+    width: fit-content;
     justify-content: center;
     text-align: center;
-    column-gap: 30px;
+    margin: 0 auto;
+    margin-bottom: 4px;
+    text-decoration: none;
+
+    color: $brown;
     font-size: 18px;
     font-style: normal;
     font-weight: 500;
-    line-height: 120%;
+    line-height: normal;
 
-    @media screen and (max-width: 1025px) {
-      padding: 30px 0;
-      font-size: 16px;
+    @media screen and (max-width: 769px) {
+      font-size: 15px;
     }
+
+    &:hover{
+      text-decoration: underline;
+    }
+  }
+
+  &__text {
+    color: $brown;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    text-align: center;
+
     @media screen and (max-width: 769px) {
       font-size: 15px;
     }
