--- a/src/blocks/form/form.scss
+++ b/src/blocks/form/form.scss
@@ -3,7 +3,8 @@
 .form {
   &__wrapper {
     display: flex;
-    column-gap: 20px;
+    flex-direction: column;
+    row-gap: 20px;
 
     @media screen and (max-width: 1025px) {
       column-gap: 10px;
@@ -21,39 +22,49 @@
   }
 
   &__input {
-    display: flex;
-    align-items: center;
-    width: 100%;
-    height: 60px;
-    padding: 18px 23px;
-    box-sizing: border-box;
-    background-color: transparent;
-    font-size: 18px;
-    line-height: 120%;
+    border: 1px solid #C9ADA7;
+    background: #FFF;
+    box-shadow: 0px 2px 4px 0px rgba(77, 56, 49, 0.20) inset;
 
-    border-radius: 10px;
-    border: 1px solid #BDBDBD;
+    padding: 19px 25px;
+    display: flex;
+    cursor: pointer;
+    align-items: center;
     transition: 0.2s;
 
-    @media screen and (max-width: 1025px) {
-      height: 55px;
-      padding: 18px;
-      border-radius: 7px;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 120%; /* 21.6px */
+    color: $brown;
+    width: 100%;
+    box-sizing: border-box;
+
+    @media screen and (max-width: 769px) {
       font-size: 16px;
+      height: 55px;
+      padding: 15px 25px;
+    }
+    @media screen and (max-width: 345px) {
+      padding: 15px;
     }
 
     &::placeholder {
+      color: $beige;
       font-size: 18px;
-      line-height: 120%;
-      color: #BDBDBD;
+      font-style: normal;
+      font-weight: 500;
+      line-height: 120%; /* 21.6px */
 
-      @media screen and (max-width: 1025px) {
+      @media screen and (max-width: 769px) {
         font-size: 16px;
       }
     }
 
     &:focus {
-      outline: none;}
+      border: 1px solid $brown;
+      outline: none;
+    }
   }
 
   &__submit {
