--- a/src/blocks/modal/modal.scss
+++ b/src/blocks/modal/modal.scss
@@ -41,87 +41,70 @@
   }
 
   &__wrapper {
-    max-width: 1370px;
+    max-width: 530px;
     width: 100%;
     margin: auto;
     position: relative;
-    background: $white;
-    box-shadow: 0px 1px 6px rgba(63, 63, 63, 0.4);
-    border-radius: 15px;
-    padding: 96px 50px;
+    padding: 88px 75px;
     box-sizing: border-box;
     min-height: 500px;
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: center;
+    border-radius: 5px;
+    background: $beige;
+    filter: drop-shadow(0px 4px 4px rgba(77, 56, 49, 0.45));
 
-    @media screen and (max-width: 1441px) {
-      max-width: 1200px;
-    }
-    @media screen and (max-width: 992px) {
-      min-height: 400px;
-    }
+
     @media screen and (max-width: 769px) {
-      padding: 25px 15px;
+      padding: 80px 15px;
     }
   }
 
   &__close {
     position: absolute;
-    top: 40px;
-    right: 60px;
+    top: 30px;
+    right: 30px;
 
-    width: 30px;
-    height: 30px;
+    width: 25px;
+    height: 25px;
     display: flex;
     cursor: pointer;
-
-    @media screen and (max-width: 1441px) {
-    }
-    @media screen and (max-width: 992px) {
-      top: 30px;
-      right: 30px;
-    }
-    @media screen and (max-width: 769px) {
-      position: unset;
-      margin-bottom: 40px;
-    }
   }
 
   &__title {
-    margin-bottom: 30px;
+    color: $red;
+    text-align: center;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: 120%; /* 38.4px */
+    margin-bottom: 17px;
 
     @media screen and (max-width: 769px) {
-      margin-bottom: 15px;
+      font-size: 22px;
+      margin-bottom: 10px;
     }
   }
 
   &__subtitle {
-    font-weight: 600;
-    font-size: 30px;
-    line-height: 120%;
-    margin-bottom: 70px;
+    color: $brown;
     text-align: center;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 120%; /* 21.6px */
+    margin-bottom: 30px;
 
-    @media screen and (max-width: 1441px) {
-      font-size: 24px;
-      margin-bottom: 55px;
-    }
-    @media screen and (max-width: 992px) {
-      margin-bottom: 40px;
-    }
     @media screen and (max-width: 769px) {
-      font-size: 22px;
-      margin-bottom: 20px;
-    }
-    @media screen and (max-width: 340px) {
-      font-size: 18px;
+      font-size: 16px;
+      margin-bottom: 40px;
     }
   }
 
   &__form {
-    max-width: 850px;
+    max-width: 375px;
     width: 100%;
     margin: 0 auto;
   }
