--- a/src/blocks/quiz/quiz.scss
+++ b/src/blocks/quiz/quiz.scss
@@ -153,6 +153,7 @@
       &:checked + .quiz-step__text {
         background: $beige;
         box-shadow: 0px 2px 4px 0px rgba(77, 56, 49, 0.20) inset;
+        font-weight: 900;
       }
     }
 
