--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,6 +9,7 @@
 @import "../blocks/hero/hero";
 @import "../blocks/advantages/advantages";
 @import "../blocks/quiz/quiz";
+@import "../blocks/last-step/last-step";
 @import "../blocks/form/form";
 @import "../blocks/modal/modal";
 @import "../blocks/thanks/thanks";
