--- a/src/blocks/modal/modal.scss
+++ b/src/blocks/modal/modal.scss
@@ -82,6 +82,12 @@
     line-height: 120%; /* 38.4px */
     margin-bottom: 17px;
 
+    @media screen and (max-width: 1441px) {
+      font-size: 28px;
+    }
+    @media screen and (max-width: 1025px) {
+      font-size: 24px;
+    }
     @media screen and (max-width: 769px) {
       font-size: 22px;
       margin-bottom: 10px;
