--- a/src/blocks/thanks/thanks.scss
+++ b/src/blocks/thanks/thanks.scss
@@ -4,49 +4,76 @@
 
   &__wrapper {
     position: relative;
+    max-width: 1000px;
+    width: 100%;
+    margin: 0 auto;
+    border-radius: 5px;
+    background: rgba(201, 173, 167, 0.50);
+
+    padding: 50px;
+
+    min-height: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    box-sizing: border-box;
+
+    @media screen and (max-width: 769px) {
+      min-height: 400px;
+      padding: 50px 15px;
+    }
   }
 
   &__close {
     position: absolute;
     top: 40px;
-    right: 60px;
+    right: 40px;
 
-    width: 30px;
-    height: 30px;
+    width: 40px;
+    height: 40px;
     display: flex;
     cursor: pointer;
 
     @media screen and (max-width: 1441px) {
     }
-    @media screen and (max-width: 992px) {
-      top: 30px;
-      right: 30px;
+    @media screen and (max-width: 769px) {
+      width: 25px;
+      height: 25px;
+      top: 20px;
+      right: 20px;
+    }
+  }
+
+  &__title {
+    color: $red;
+    text-align: center;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: 120%; /* 38.4px */
+    margin-bottom: 30px;
+
+    @media screen and (max-width: 1441px) {
+      font-size: 28px;
+    }
+    @media screen and (max-width: 1025px) {
+      font-size: 24px;
     }
     @media screen and (max-width: 769px) {
-      position: unset;
-      margin-bottom: 40px;
+      font-size: 22px;
+      margin-bottom: 20px;
     }
   }
 
   &__subtitle {
-    margin-bottom: 50px;
-  }
-
-  &__notice {
-    color: #001749;
-    font-size: 30px;
+    color: $brown;
+    text-align: center;
+    font-size: 18px;
+    font-style: normal;
     font-weight: 500;
     line-height: 120%;
-    text-align: center;
 
-
-    @media screen and (max-width: 1441px) {
-      font-size: 25px;
-    }
-    @media screen and (max-width: 1025px) {
-      font-size: 20px;
-    }
-    @media screen and (max-width: 576px) {
+    @media screen and (max-width: 769px) {
       font-size: 16px;
     }
   }
